--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "php": "^8.2",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "minishlink/web-push": "^9.0"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
